// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge demo -- badge 1`] = `
.c31 {
  position: relative;
  display: inline-block;
}

.c32 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c29 {
  margin-right: 8px;
}

.c27 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c27 .c28 {
  color: #4074e1;
}

.c30 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c25 .c26,
.c25 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c25 .c26:last-child,
.c25 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c25 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c25 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c25 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c6 {
  position: relative;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c6 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  background: #FFF;
  font-size: inherit;
  outline: none;
  color: inherit;
  height: 28px;
}

.c6 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 input::-moz-placeholder {
  color: #abb4c3;
}

.c6 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 input::placeholder {
  color: #abb4c3;
}

.c6 input:hover {
  border-color: #4683e6;
}

.c6 input:focus {
  border-color: #4683e6;
}

.c12 {
  position: relative;
}

.c14 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c14::-webkit-input-placeholder {
  color: #abb4c3;
}

.c14::-moz-placeholder {
  color: #abb4c3;
}

.c14:-ms-input-placeholder {
  color: #abb4c3;
}

.c14::placeholder {
  color: #abb4c3;
}

.c9 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c11 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c7:hover {
  border-color: #4683e6;
}

.c7 .c13 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c7 .c8,
.c7 .c10 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c7 .c8:hover,
.c7 .c10:hover {
  color: #4074e1;
}

.c7 .c8 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c7 .c10 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c20 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c24 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c15:hover {
  border-color: #4683e6;
}

.c15 .c21 {
  width: 20px;
  height: 20px;
}

.c15 .c23 {
  left: 13px;
  height: 10px;
}

.c15 .c17,
.c15 .c19 {
  line-height: 16px;
}

.c15 .c17 {
  padding-right: 20px;
}

.c15 .c19 {
  padding-left: 20px;
}

.c15 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        value
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <span
          class="c6"
        >
          <input
            value="1"
          />
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        maxValue
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c7"
        >
          <div>
            <span
              class="c8 c9"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c10 c11"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c12"
          >
            <input
              autocomplete="off"
              class="c13 c14"
              min="-9007199254740991"
              step="1"
              value="99"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        dot
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c20"
            >
              OFF
            </span>
            <span
              class="c21 c22"
            >
              <span
                class="c23 c24"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        hideWhenZero
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c20"
            >
              OFF
            </span>
            <span
              class="c21 c22"
            >
              <span
                class="c23 c24"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        noneContent
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c20"
            >
              OFF
            </span>
            <span
              class="c21 c22"
            >
              <span
                class="c23 c24"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        placement
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c25"
        >
          <div
            checked=""
            class="c26 c27"
          >
            <i
              class="icon__cbox-ed c28 c29 "
            />
            topRight
          </div>
          <div
            class="c26 c30"
          >
            <i
              class="icon__circle c28 c29 "
            />
            topLeft
          </div>
          <div
            class="c26 c30"
          >
            <i
              class="icon__circle c28 c29 "
            />
            bottomRight
          </div>
          <div
            class="c26 c30"
          >
            <i
              class="icon__circle c28 c29 "
            />
            bottomLeft
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        badgeStyle.color
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        badgeStyle.background
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c31"
      style="margin:10px;"
    >
      <div
        style="width:50px;height:50px;background:#ddd;"
      />
      <div
        style="position:absolute;"
      >
        <span
          class="c32"
        >
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customStyle 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
        style="background:white;color:black;border:1px solid #ddd;"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c2"
        style="background:blue;"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        string
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        <span
          style="font-weight:bolder;"
        >
          node
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- dot 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c2"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- hideWhenZero 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        0
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
  </div>
</div>
`;

exports[`Badge demo -- maxValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        10
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        9+
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- noneContent 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <span
      class="c1"
    >
      99+
    </span>
  </div>
</div>
`;

exports[`Badge demo -- placement 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="c1"
      >
        99+
      </span>
    </div>
  </div>
</div>
`;
